# Agentic-Ai

./: README.md  pyproject.toml  requirements.txt
Agno_Agents/: app.py  app_test.py  new_blog_writer.py
Agno_Agents/input/: exams.json
Agno_Agents/output/: GATE 2025_20250419174209.json  GATE 2025_20250419175559.json  processing_summary.json
Agno_Agents_v2/: b2d.py
Agno_Agents_v2/output/: CUET 2025_20250420113141.json  GATE 2025_20250419172546.json  GATE 2025_20250419173649.json  (+3 more)
Atomic_Agents/: readme.md
Autogen_Agent/: L1_Multi-Agent_Conversation_and_Stand-up_Comedy.ipynb  L2_Sequential_Chats_and_Customer_Onboarding.ipynb  L3_Reflection_and_Blogpost_Writing.ipynb  L4_Tool_Use_and_Conversational_Chess.ipynb  L5_Coding_and_Financial_Analysis.ipynb  L6-Planning_and_Stock_Report_Generation.ipynb  autogen_script.py
Customer_Support_CrewAi/: app.py  observe.py
DataCorrection_Agent/: script.py
DataValidation_Agent/: app.py  data.json  dev.py  test.py
Image_generator_Agent_MicrosoftAzure_Agents/: script.py
Langgraph_examples/: chatbot.py
Market_Research_Agent/: app.py
Market_Research_Agent_Langflow/: Market_Research_Multiagent.json  requirements.txt
MultiAgent_Ai/: agent.py
MultiAgent_Ai_Phidata/: prompts.py  schema.py
Pair_Programmer_CrewAi/: age.py  agents.py  app.py
Reflection_Agent/: chains.py
Reflection_Agent_Customized_Langgraph/: app.py
Reflection_Agent_Langgraph/: app.py
Reflexion_Agent/: chains.py  schema.py
Reflexion_Agent_Langgraph/: chains.py  schema.py
SubjectMatter_Expert_Agent_Langgraph/: README.md  app.py
